exatorrent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exatorrent

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exatorrent
  namespace: exatorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exatorrent
  template:
    metadata:
      labels:
        app: exatorrent
    spec:
      containers:
      - name: exatorrent
        image: ghcr.io/varbhat/exatorrent:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: exatorrent-data
          mountPath: /exa/exadir
      volumes:
      - name: exatorrent-data
        hostPath:
          path: /home/pbourke/torrents
          type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: exatorrent
  namespace: exatorrent
spec:
  selector:
    app: exatorrent
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exatorrent-ingress
  namespace: exatorrent
spec:
  ingressClassName: traefik
  rules:
  - host: torrent.echologic.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: exatorrent
            port:
              number: 5000
