plex-32400-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress-32400
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: custom
spec:
  rules:
  - host: plex.echologic.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-server
            port:
              number: 32400
