plex-linuxserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex-server
  template:
    metadata:
      labels:
        app: plex-server
    spec:
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: plex-config
          mountPath: /config
        - name: plex-tv
          mountPath: /tv
        - name: plex-movies
          mountPath: /movies
      volumes:
      - name: plex-config
        hostPath:
          path: /home/pbourke/media/plex/config
      - name: plex-tv
        hostPath:
          path: /home/pbourke/media/plex/data
      - name: plex-movies
        hostPath:
          path: /home/pbourke/media/plex/transcode
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: plex.echologic.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-server
            port:
              number: 32400
---
apiVersion: v1
kind: Service
metadata:
  name: plex-server
spec:
  type: NodePort
  selector:
    app: plex-server
  ports:
  - protocol: TCP
    port: 32400
    targetPort: 32400
    nodePort: 32400
