pms-greensheep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-server
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex-server
  template:
    metadata:
      labels:
        app: plex-server
    spec:
      containers:
      - name: plex
        image: greensheep/plex-server-docker-rpi:latest
        ports:
        - containerPort: 32400
        volumeMounts:
        - name: plex-config
          mountPath: /config
        - name: plex-data
          mountPath: /data
        - name: plex-transcode
          mountPath: /transcode
      volumes:
      - name: plex-config
        hostPath:
          path: /home/pbourke/media/plex/config
      - name: plex-data
        hostPath:
          path: /home/pbourke/media/plex/data
      - name: plex-transcode
        hostPath:
          path: /home/pbourke/media/plex/transcode
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: plex.echologic.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-server
            port:
              number: 32400
---
apiVersion: v1
kind: Service
metadata:
  name: plex-server
  namespace: plex
spec:
  selector:
    app: plex-server
  ports:
  - protocol: TCP
    port: 32400
    targetPort: 32400
